# ebpf-fs-watch

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  event.h  main.c  path_elements.h  watch.bpf.c  watch.c
